--- a/app/views/layouts/index.html.erb
+++ b/app/views/layouts/index.html.erb
@@ -1,6 +1,17 @@
+<!--検索フォーム-->
 <%= search_form_for @q do |f| %>
-    <%= f.label :name_cont %>
-    <%= f.search_field :name_cont %>
-
-    <%= f.submit %>
+    <!--name_contは、あいまい検索を指定-->
+    <%= f.text_field :name_cont %>
+    <%= f.submit "検索" %>
+    <% end %>
+    <!--検索結果-->
+    <% if @spots.present? %>
+    <!--検索がヒットした場合-->
+    <% @spots.each do |spot| %>
+        <%= spot.id %>
+        <%= spot.name %>
+    <% end %>
+    <% else %>
+    <!--検索がヒットしなかった場合-->
+    <p>検索結果はありません</p>
 <% end %>
