--- a/app/views/spots/index.html.erb
+++ b/app/views/spots/index.html.erb
@@ -2,6 +2,9 @@
 <%= search_form_for @q do |f| %>
     <%= f.label :"スポット検索" %>
     <%= f.search_field :name_cont %>
+    <%= f.label :"テキストで検索" %>
+    <%= f.search_field :text_cont %>
+
 
     <%= f.submit "検索" %>
     <% end %>
@@ -11,6 +14,7 @@
         <% @spots.each do |spot| %>
             <%= spot.id %>
             <%= spot.name %>
+            <%= spot.text %>
         <% end %>
     <% else %>
     <!--検索がヒットしなかった場合-->
