--- a/app/views/spots/index.html.erb
+++ b/app/views/spots/index.html.erb
@@ -1,22 +1,24 @@
 <!--検索フォーム-->
 <%= search_form_for @q do |f| %>
     <%= f.label :"スポット検索" %>
-    <%= f.search_field :name_cont %>
-    <%= f.label :"テキストで検索" %>
-    <%= f.search_field :text_cont %>
-
-
+    <%= f.search_field :name_cont, placeholder: "キーワードを入力してください" %>
     <%= f.submit "検索" %>
-    <% end %>
+    <br>
+
+    <%= f.label :"テキストで検索" %>
+    <%= f.search_field :text_cont, placeholder: "キーワードを入力してください" %>
+    <%= f.submit "検索" %>
+<% end %>
+ 
     <!--検索結果-->
-    <% if @spots.present? %>
-        <!--検索がヒットした場合-->
-        <% @spots.each do |spot| %>
-            <%= spot.id %>
-            <%= spot.name %>
-            <%= spot.text %>
-        <% end %>
-    <% else %>
+<% if @q.conditions.present? && @spots.present? %>
+    <!--検索がヒットした場合-->
+    <% @spots.each do |spot| %>
+        <%= spot.name %>
+        <%= spot.text %>
+        <br>
+    <% end %>
+<% else %>
     <!--検索がヒットしなかった場合-->
     <p>検索結果はありません</p>
 <% end %>
