--- a/app/views/spots/index.html.erb
+++ b/app/views/spots/index.html.erb
@@ -8,6 +8,11 @@
     <%= f.label :'テキストで検索' %>
     <%= f.search_field :text_cont, placeholder: 'キーワードを入力してください' %>
     <%= f.submit '検索' %>
+    <br>
+
+    <%= f.label :region_id, '都道府県：' %>
+    <%= f.collection_select :region_id_eq, Region.all, :id, :name %>
+    <%= f.submit '検索' %>
 <% end %>
  
     <!--検索結果-->
