ActiveHashを用いてviewで都道府県名を表示できるようにしました

--- a/app/views/spots/index.html.erb
+++ b/app/views/spots/index.html.erb
@@ -21,6 +21,7 @@
     <% @spots.each do |spot| %>
         <%= spot.name %>
         <%= spot.text %>
+        <%= spot.region.name %>
         <br>
     <% end %>
 <% else %>
