--- a/app/views/spots/index.html.erb
+++ b/app/views/spots/index.html.erb
@@ -1,11 +1,17 @@
+<!--フラッシュメッセージ-->
+<% flash.each do |message_type, message| %>
+    <div class='alert alert-<%= message_type %>'><%= message %></div>
+<% end %>
+
 <!--検索フォーム-->
+<h1 class='form-heading'>検索する</h1>
 <%= search_form_for @q do |f| %>
-    <%= f.label :'スポット検索' %>
+    <%= f.label :'スポット：' %>
     <%= f.search_field :name_cont, placeholder: 'キーワードを入力してください' %>
     <%= f.submit '検索' %>
     <br>
 
-    <%= f.label :'テキストで検索' %>
+    <%= f.label :'テキスト：' %>
     <%= f.search_field :text_cont, placeholder: 'キーワードを入力してください' %>
     <%= f.submit '検索' %>
     <br>
